# objektinis-trecia

./: CMakeLists.txt  README.md  failuGeneratorius.cpp  lib.h  main.cpp  programos-spartos-analize.xlsx  run.sh  studentas.cpp  studentas.h
include/: lib.h  studentas.h
installation/: AppStudentSetup.msi
spartos-analize/: programos-spartos-analize.xlsx
src/: failuGeneratorius.cpp  main.cpp  studentas.cpp
